syntax = "proto3";

package packingquerypb;
option go_package = "./packingquerypb";

message Packing {
    int64 id = 1;
    string fo_id = 2;
    int32 line_id = 3;
    int32 machine_id = 4;
    int32 unit_id = 5;
    int32 department_id = 6;
    int32 area_id = 7;
    string completed_at = 8;
    int32 status = 9;
    string createdAt = 10;
    string updatedAt = 11;
    repeated EquipmentChecking equipment_checkings = 12;
}

message EquipmentChecking {
    int64 id = 1;
    int64 id_equipment_checking_list = 2;
    int64 packing_id = 3;
    int32 asset_equipment_id = 4;
    
    string fo_id = 5;
    string fo_photo = 6;
    int32 fo_condition = 7;
    string fo_note = 8;

    string ao_id = 9;
    int32 ao_conclusion = 10;
    string ao_note = 11;
    string ao_created_at = 12;

    string mo_id = 13;
    string mo_repair_photo = 14;
    string mo_note = 15;
    string mo_created_at = 16;

    string mr_id = 17;
    string mr_comment = 18;
    string mr_created_at = 19;

    string createdAt = 20;
    string updatedAt = 21;
}

// All
message GetPackingsRequest {
    string nophoto = 1;
    string page = 2;
    string perpage = 3;
    string status = 4;
    string line_id = 5;
    string machine_id = 6;
    string date = 7; 
    string fo_condition = 8;
    string ao_conclusion = 9;
}
message GetPackingsResponse {
    repeated Packing packings = 1;
    int64 total = 2;
    int64 page = 3;
    int64 last_page = 4;
}

message GetPackingRequest {
    int64 id = 1;
}
message GetPackingResponse {
    int64 id = 1;
    string fo_id = 2;
    int32 line_id = 3;
    int32 machine_id = 4;
    int32 unit_id = 5;
    int32 department_id = 6;
    int32 area_id = 7;
    string completed_at = 8;
    int32 status = 9;
    string createdAt = 10;
    string updatedAt = 11;
    repeated EquipmentChecking equipment_checkings = 12;
}

service PackingQueryService {
    // All
    rpc GetPackings(GetPackingsRequest) returns (GetPackingsResponse) {};
    rpc GetPacking(GetPackingRequest) returns (GetPackingResponse) {};
}